<resources>
    <string name="app_name">Vending Machine</string>
    <string name="action_settings">Settings</string>
    <string name="price">Price</string>
    <string name="float_ad">Brought to you by Barbara Bazemore Kiszka</string>
    <string name="key_vending_state" translatable="false">
        com.android.bbkiszka.vendingmachine.state
    </string>
    <string name="vend_balance_default">Insert Coins</string>
    <string name="vend_purchase_complete">Thank you for your purchase.</string>
    <string name="vend_insufficient_funds">Please insert %s more to purchase this item.</string>
    <string name="vend_sold_out">Sold out</string>
    <string name="vend_refund_notice">Refunded %s</string>
    <string name="desc_insert_coin_button">Insert coin button</string>
    <string name="desc_refund">Refund button</string>
    <string name="desc_vend_item_picture">Picture of vending item</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_restock_title">Restock Inventory</string>
    <string name="pref_restock_key" translatable="false">
        com.android.bbkiszka.vendingmachine.restock.button
    </string>
    <string name="pref_restock_summary">Restock the items in the vending machine with the default
        assortment.
    </string>
    <string name="pref_coin_value_title">Coin Values</string>
    <string name="pref_coin_value_key" translatable="false">
        com.android.bbkiszka.vendingmachine.coinvalue
    </string>
    <string name="pref_coin_value_hint">Provide a comma separated list of integer values
        representing coins
    </string>
    <string name="pref_coin_value_default_value">5, 10, 25, 100</string>
</resources>
