<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <Preference android:title="@string/pref_restock_title"
                android:key="@string/pref_restock_key"
                android:summary="@string/pref_restock_summary"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_coin_value_key"
        android:title="@string/pref_coin_value_title"
        android:hint="@string/pref_coin_value_hint"
        android:defaultValue="@string/pref_coin_value_default_value"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1"/>

</PreferenceScreen>
