<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivityFragment"
                tools:showIn="@layout/activity_main">
    <TextView
        android:id="@+id/vending_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:maxLines="3"
        android:text="@string/vend_balance_default"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <ImageButton
        android:id="@+id/vending_insert_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/vending_balance"
        android:contentDescription="@string/desc_insert_coin_button"
        android:gravity="top|start"
        android:src="@mipmap/ic_insert_coin"/>
    <ImageButton
        android:id="@+id/vending_refund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vending_insert_coin"
        android:contentDescription="@string/desc_refund"
        android:gravity="top|start"
        android:src="@mipmap/ic_refund"
        />
    <GridView
        android:id="@+id/vending_grid"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/vending_refund"
        android:layout_toRightOf="@id/vending_refund"
        android:background="@color/background_material_dark"
        android:columnWidth="60dp"
        android:horizontalSpacing="0dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="0dp"
        tools:context=".MainActivityFragment">
    </GridView>
    <ListView
        android:id="@+id/vending_coin_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/vending_insert_coin"
        android:layout_toRightOf="@id/vending_insert_coin"
        android:background="@color/background_material_light"
        android:minHeight="?android:listPreferredItemHeight"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="invisible"/>

</RelativeLayout>
